[FEATURE] Allow to exclude paths from vendor class map

--- a/tests/src/Fixtures/Extensions/valid/typo3-vendor-bundler.yaml
+++ b/tests/src/Fixtures/Extensions/valid/typo3-vendor-bundler.yaml
@@ -1,4 +1,6 @@
 autoload:
   dropComposerAutoload: false
   targetFile: 'ext_emconf_modified.php'
+  excludeFromClassMap:
+    - 'vendor/composer/InstalledVersions.php'
 pathToVendorLibraries: 'libs'
