--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /tests/src/Fixtures/Extensions/*/libs/vendor
 /tests/src/Fixtures/Extensions/*/libs/composer.lock
 /tests/src/Fixtures/Extensions/*/composer.json.bak
+/tests/src/Fixtures/Extensions/*/composer_modified.json
 /tests/src/Fixtures/Extensions/*/ext_emconf.php.bak
 /tests/src/Fixtures/Extensions/*/ext_emconf_modified.php
 /tests/src/Fixtures/Extensions/valid-temporary
