--- a/.github/workflows/cgl.yaml
+++ b/.github/workflows/cgl.yaml
@@ -3,12 +3,21 @@ on:
   push:
     branches:
       - '**'
+  pull_request:
+    branches:
+      - main
 
 permissions: read-all
 
 jobs:
+  prepare:
+    name: Prepare workflow
+    uses: eliashaeussler/.github/.github/workflows/pull-request.yaml@main
+
   cgl:
     runs-on: ubuntu-latest
+    needs: prepare
+    if: needs.prepare.outputs.continue == 'true'
     steps:
       - uses: actions/checkout@v4
         with:
