--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,13 +3,22 @@ on:
   push:
     branches:
       - '**'
+  pull_request:
+    branches:
+      - main
 
 permissions: read-all
 
 jobs:
+  prepare:
+    name: Prepare workflow
+    uses: eliashaeussler/.github/.github/workflows/pull-request.yaml@main
+
   tests:
     name: Tests (PHP ${{ matrix.php-version }}, Composer ${{ matrix.composer-version }} & ${{ matrix.dependencies }} dependencies)
     runs-on: ubuntu-latest
+    needs: prepare
+    if: needs.prepare.outputs.continue == 'true'
     strategy:
       fail-fast: false
       matrix:
@@ -44,6 +53,8 @@ jobs:
   coverage:
     name: Test coverage
     runs-on: ubuntu-latest
+    needs: prepare
+    if: needs.prepare.outputs.continue == 'true'
     steps:
       - uses: actions/checkout@v4
         with:
