--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
 		"phpunit/phpunit": "^11.5 || ^12.2",
 		"shipmonk/composer-dependency-analyser": "^1.8"
 	},
+	"conflict": {
+		"cuyz/valinor": "2.2.1"
+	},
 	"autoload": {
 		"psr-4": {
 			"EliasHaeussler\\Typo3VendorBundler\\": "src/"
