--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         php-version: ["8.2", "8.3", "8.4"]
         # Composer 2.3 is broken and therefore not supported, Composer 2.2 (LTS) is supported
-        composer-version: ["2.2", "2.4", "2.5", "2.6", "2.7", "2.8"]
+        composer-version: ["2.2", "2.4", "2.5", "2.6", "2.7", "2.8", "2.9"]
         dependencies: ["highest", "lowest"]
     steps:
       - uses: actions/checkout@v5
