--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,20 @@
 	],
 	"constraints": {
 		"php": "8.2.*"
-	}
+	},
+	"packageRules": [
+		{
+			"enabled": false,
+			"matchCurrentVersion": "8.2",
+			"matchDatasources": [
+				"github-tags"
+			],
+			"matchDepNames": [
+				"php"
+			],
+			"matchFileNames": [
+				".github/workflows/cgl.yaml"
+			]
+		}
+	]
 }
