[BUGFIX] Respect `--no-overwrite` input when file already exists

--- a/tests/src/Fixtures/Extensions/valid/typo3-vendor-bundler.yaml
+++ b/tests/src/Fixtures/Extensions/valid/typo3-vendor-bundler.yaml
@@ -3,6 +3,7 @@ autoload:
   target:
     file: 'ext_emconf_modified.php'
     manifest: 'extEmConf'
+    overwrite: false
   excludeFromClassMap:
     - 'vendor/composer/InstalledVersions.php'
 pathToVendorLibraries: 'libs'
