--- a/tests/src/Fixtures/Extensions/valid/typo3-vendor-bundler.yaml
+++ b/tests/src/Fixtures/Extensions/valid/typo3-vendor-bundler.yaml
@@ -6,4 +6,8 @@ autoload:
     overwrite: false
   excludeFromClassMap:
     - 'vendor/composer/InstalledVersions.php'
+dependencies:
+  sbom:
+    file: 'sbom_generated.json'
+    overwrite: false
 pathToVendorLibraries: 'libs'
