--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /.build/
 /tests/src/Fixtures/Extensions/*/libs/vendor
 /tests/src/Fixtures/Extensions/*/libs/composer.lock
+/tests/src/Fixtures/Extensions/*/libs/sbom.xml
+/tests/src/Fixtures/Extensions/*/libs/sbom_generated.json
 /tests/src/Fixtures/Extensions/*/composer.json.bak
 /tests/src/Fixtures/Extensions/*/composer_modified.json
 /tests/src/Fixtures/Extensions/*/ext_emconf.php.bak
