[!!!][TASK] Drop support for autoload bundling in `ext_emconf.php`

--- a/tests/src/Fixtures/Extensions/valid/typo3-vendor-bundler.yaml
+++ b/tests/src/Fixtures/Extensions/valid/typo3-vendor-bundler.yaml
@@ -1,8 +1,6 @@
 autoload:
-  dropComposerAutoload: false
   target:
-    file: 'ext_emconf_modified.php'
-    manifest: 'extEmConf'
+    file: 'composer_modified.json'
     overwrite: false
   excludeFromClassMap:
     - 'vendor/composer/InstalledVersions.php'
