--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@
 /tests/src/Fixtures/Extensions/*/libs/sbom_generated.json
 /tests/src/Fixtures/Extensions/*/composer.json.bak
 /tests/src/Fixtures/Extensions/*/composer_modified.json
+/tests/src/Fixtures/Extensions/invalid-libs/libs
+/tests/src/Fixtures/Extensions/invalid-libs/vendor
 /tests/src/Fixtures/Extensions/valid-temporary
+/tests/src/Fixtures/Extensions/valid-no-libs/libs
+/tests/src/Fixtures/Extensions/valid-no-libs/vendor
 /vendor/
