--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
 		"cyclonedx/cyclonedx-library": "^4.0",
 		"eliashaeussler/task-runner": "^1.0.1",
 		"package-url/packageurl-php": "^1.0",
-		"symfony/console": "^5.4 || ^6.4 || ^7.0 || ^8.0",
-		"symfony/filesystem": "^5.4 || ^6.4 || ^7.0 || ^8.0",
-		"symfony/yaml": "^5.4 || ^6.4 || ^7.0 || ^8.0"
+		"symfony/console": "^6.4 || ^7.0 || ^8.0",
+		"symfony/filesystem": "^6.4 || ^7.0 || ^8.0",
+		"symfony/yaml": "^6.4 || ^7.0 || ^8.0"
 	},
 	"require-dev": {
 		"armin/editorconfig-cli": "^2.1",
