[TASK] Manage CycloneDX version releases with Renovate

--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,34 @@
 	"constraints": {
 		"php": "8.2.*"
 	},
+	"customManagers": [
+		{
+			"customType": "regex",
+			"managerFilePatterns": [
+				"/^docs/schema\\.md$/",
+				"/^res/typo3-vendor-bundler\\.schema\\.json$/"
+			] ,
+			"matchStrings": [
+				"`(?<currentValue>[^`]+)`\\s*<!-- cdx-spec -->",
+				"\"version\": {\\s*\"default\": \"(?<currentValue>[^\"]+)\""
+			],
+			"datasourceTemplate": "github-tags",
+			"depNameTemplate": "CycloneDX/specification",
+			"versioningTemplate": "loose"
+		},
+		{
+			"customType": "regex",
+			"managerFilePatterns": [
+				"/^src/.+\\.php$/"
+			] ,
+			"matchStrings": [
+				"Core\\\\Spec\\\\Version::(?<currentValue>v\\d+dot\\d+)"
+			],
+			"datasourceTemplate": "github-tags",
+			"depNameTemplate": "CycloneDX/specification",
+			"versioningTemplate": "regex:^v(?<major>\\d+)dot(?<minor>\\d+)$"
+		}
+	],
 	"packageRules": [
 		{
 			"enabled": false,
@@ -19,6 +47,25 @@
 			],
 			"matchFileNames": [
 				".github/workflows/cgl.yaml"
+			]
+		},
+		{
+			"groupName": "CycloneDX specification",
+			"extends": [
+				":automergeDisabled"
+			],
+			"matchDepNames": [
+				"CycloneDX/specification"
+			],
+			"matchManagers": [
+				"custom.regex"
+			],
+			"commitMessagePrefix": "[FEATURE]",
+			"commitMessageAction": "Support",
+			"commitMessageTopic": "CycloneDX specification",
+			"commitMessageExtra": "{{newMajor}}.{{newMinor}}",
+			"labels": [
+				"enhancement"
 			]
 		}
 	]
