[TASK] Move tests from `tests/src` to `tests`

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"EliasHaeussler\\Typo3VendorBundler\\Tests\\": "tests/src/"
+			"EliasHaeussler\\Typo3VendorBundler\\Tests\\": "tests/"
 		}
 	},
 	"config": {
